# pandoc-preview-editor

./: .gitignore  AGENTS.md  DESIGN-COMMITMENTS.md  Design-Commitments-and-Development-Philosophy.md  Feature-Disposition-Matrix.md  Home.md  Pandoc-Preview-Editor-Requirements.md  Proof-Obligations-and-Test-Philosophy.md  REPORT.md  REQUIREMENTS.md  TESTING-DISCIPLINE.md  TODO.md  debug-frag-test-standalone.mjs  default-config.toml  diagnose-render.mjs  justfile  llm-proof-loop-wtf-patterns.md  math-test.md  package-lock.json  package.json  pandoc-preview.toml  playwright.config.ts  playwright.esc-leak.config.ts  repro-render.mjs  repro.mjs  semgrep.yml  ses_log1.md  test.html  test.md  test.tex  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.serena/: project.yml
archive/: TESTING-DISCIPLINE.md  abcd.edi  debug-compare.mjs  debug-fragment-test.mjs  debug-headed.mjs  debug-observe.mjs  debug-observe.ts  debug-pty.ts  debug-resize.mjs  debug-vp.mjs  playwright.cert.config.ts  playwright.config.ts  playwright.ladder.config.ts  playwright.ui-bugs.config.ts
docs/: notes.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: preview-edit-hooks.css  preview-edit-hooks.js  tikz-overlay.html  tikzcd.lua.bak
src-tauri/assets/diagram-templates/: ipe.ipe  tikzit.tikz  xournal.xoj  xournalpp.xopp
src-tauri/capabilities/: default.json
src-tauri/src/: command_flags.rs  commands.rs  config.rs  fs_utils.rs  lib.rs  render.rs  state.rs
src-tauri/src/commands/: config.rs  diagram.rs  document.rs  figures.rs  filters.rs  mod.rs  plugins.rs  zotero.rs
(+233 files in other folders)
