[package]
name = "app"
version = "0.1.0"
description = "pandoc-preview — Tauri-first rewrite"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
e2e-testing = ["dep:tauri-plugin-playwright"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri-plugin-playwright = { version = "0.2", optional = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Zotero CAYW and diagram proxy
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Misc utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
toml_edit = { version = "0.22", features = ["serde"] }
walkdir = "2"
shell-words = "1.1"
path-clean = "1"
url = "2"
which = "7"
content_inspector = "0.2.4"
sanitize-filename = "0.6.0"
